# qux

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  qux.cabal  stack.yaml
app/: Main.hs
app/Qux/: Options.hs  Version.hs
doc/: index.md
main/: Main.hs
src/Qux/: BuildSteps.hs  Commands.hs  Exception.hs  Steps.hs  Version.hs  Worker.hs
src/Qux/Command/: Build.hs  Check.hs  Compile.hs  Dependencies.hs  Print.hs
src/Qux/Commands/: Build.hs  Check.hs  Compile.hs  Dependencies.hs  Print.hs  Run.hs
test/app/: Main.hs
test/shared/src/Qux/Test/: Integration.hs  Steps.hs
test/src/Qux/Test/: Steps.hs
test/tests/: .gitignore
test/tests/1001-simple/lib/: foo.qux
test/tests/1001-simple/src/: main.c  simple.qux
test/tests/2008-no-lib-dir-warning/: expected-output.txt
test/tests/2008-no-lib-dir-warning/src/: hook.c
test/tests/2100-type-check-failure/: expected-output.txt
test/tests/2100-type-check-failure/src/: main.c  type_check_failure.qux
test/tests/2100-type-mismatch/: expected-output.txt
test/tests/2100-type-mismatch/src/: main.qux
test/tests/2101-undefined-function-call/: expected-output.txt
test/tests/2101-undefined-function-call/src/: main.qux
test/tests/2102-ambiguous-function-call/: expected-output.txt
test/tests/2102-ambiguous-function-call/src/: main.qux
test/tests/2103-import-not-found/: expected-output.txt
test/tests/2103-import-not-found/src/: main.qux
test/tests/2104-duplicate-import/: expected-output.txt
test/tests/2104-duplicate-import/src/: main.qux
test/tests/2105-invalid-variable-access/: expected-output.txt
test/tests/2105-invalid-variable-access/src/: main.qux
test/tests/2106-invalid-function-declaration/: expected-output.txt
test/tests/2107-invalid-function-definition/: expected-output.txt
test/tests/2107-invalid-function-definition/src/: main.qux
test/tests/2108-duplicate-function-declaration/: expected-output.txt
test/tests/2109-duplicate-function-declaration/: expected-output.txt
test/tests/2109-duplicate-function-declaration/src/: main.qux
test/tests/2110-duplicate-function-declaration/: expected-output.txt
test/tests/2110-duplicate-function-declaration/src/: main.qux
test/tests/2111-unused-import/: expected-output.txt
test/tests/2112-no-declarations/: expected-output.txt
test/tests/2113-empty-file/: expected-output.txt
