name:           qux
version:        0.0.0.0

author:         Henry J. Wylde
maintainer:     public@hjwylde.com
homepage:       https://github.com/qux-lang/qux

synopsis:       Command line binary for working with the Qux language
-- description:

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Qux
build-type:     Simple

executable qux
    main-is: Main.hs
    hs-source-dirs: main/ src/

    default-language: Haskell2010
    build-depends:
        base >= 4.8 && < 5,
        language-qux == 0.0.0.0,
        mtl == 2.*

