name:           qux
version:        0.2.0.0

author:         Henry J. Wylde
maintainer:     public@hjwylde.com
homepage:       https://github.com/qux-lang/qux

synopsis:       Command line binary for working with the Qux language
description:    Qux is an experimental language developed from the ground up with the aim of static
                compile time verification. This package provides a binary for working with it
                (compiling, type checking, pretty printing and dependency printing).

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Qux
build-type:     Simple

executable qux
    main-is: Main.hs
    hs-source-dirs: app/

    default-language: Haskell2010
    build-depends:
        base == 4.8.*,
        optparse-applicative == 0.11.*,
        qux

library
    hs-source-dirs: src/
    exposed-modules:
        Qux.Commands,
        Qux.Commands.Build,
        Qux.Commands.Check,
        Qux.Commands.Compile,
        Qux.Commands.Dependencies,
        Qux.Commands.Print,
        Qux.Version,
        Qux.Worker
    other-modules:
        Paths_qux

    default-language: Haskell2010
    build-depends:
        base == 4.8.*,
        bytestring == 0.10.*,
        containers == 0.5.*,
        directory == 1.2.*,
        extra == 1.4.*,
        filepath == 1.4.*,
        language-qux == 0.2.*,
        llvm-general == 3.4.*,
        mtl == 2.2.*,
        optparse-applicative == 0.11.*,
        pipes == 4.1.*,
        pretty >= 1.1.2 && < 1.2

