name:           qux
version:        0.2.0.0

author:         Henry J. Wylde
maintainer:     public@hjwylde.com
homepage:       https://github.com/hjwylde/qux

synopsis:       A command line binary for working with the Qux language
description:    Qux is an experimental language developed from the ground up with the aim of static
                compile time verification. This package provides a binary for working with it
                (compiling, type checking, pretty printing and dependency printing).

license:        BSD3
license-file:   LICENSE

cabal-version:  >= 1.10
category:       Qux
build-type:     Simple

extra-source-files:
    CHANGELOG.md
    README.md

source-repository head
    type:       git
    location:   git@github.com:hjwylde/qux

executable qux
    main-is:        Main.hs
    hs-source-dirs: app/
    ghc-options:    -threaded -with-rtsopts=-N
    other-modules:
        Paths_qux
        Qux.Options
        Qux.Version

    default-language: Haskell2010
    build-depends:
        base == 4.8.*,
        extra == 1.4.*,
        filepath == 1.4.*,
        language-qux == 0.2.*,
        optparse-applicative == 0.11.*,
        pipes == 4.1.*,
        pretty >= 1.1.2 && < 1.2,
        qux

library
    hs-source-dirs: src/
    exposed-modules:
        Qux.Command.Build
        Qux.Command.Check
        Qux.Command.Compile
        Qux.Command.Dependencies
        Qux.Command.Print
        Qux.Worker
    other-modules:
        Qux.Exception

    default-language: Haskell2010
    build-depends:
        base == 4.8.*,
        bytestring == 0.10.*,
        containers == 0.5.*,
        directory == 1.2.*,
        extra == 1.4.*,
        filepath == 1.4.*,
        language-qux == 0.2.*,
        llvm-general == 3.5.*,
        mtl == 2.2.*,
        optparse-applicative == 0.11.*,
        pipes == 4.1.*,
        pretty >= 1.1.2 && < 1.2,
        time == 1.5.*,
        transformers == 0.4.*

test-suite qux-test-build
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test/build/app/, test/shared/src/
    ghc-options:    -threaded -with-rtsopts=-N
    other-modules:
        Qux.Test.Integration
        Qux.Test.Steps

    default-language: Haskell2010
    build-depends:
        base == 4.8.*,
        directory == 1.2.*,
        extra == 1.4.*,
        filepath == 1.4.*,
        mtl == 2.2.*,
        pipes == 4.1.*,
        process >= 1.2 && < 1.4,
        qux,
        tasty >= 0.10 && < 0.12,
        tasty-golden == 2.3.*
